@@ -1,3 +1,11 @@
+2008-04-08  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-device-gsm.c
+	  src/applet-device-wireless.c
+	  src/applet-device-cdma.c
+	  src/applet-device-wired.c
+		- Handle unmanaged devices and wireless-disabled better
+
 2008-04-08  Tambet Ingo  <tambet@gmail.com>
 
 	* src/applet-device-cdma.c (add_disconnect_item): 
